# Aposta_Dev

./: README.md  bets.json  example.ipynb  pyproject.toml
aposta_dev/: consume.py  map.json  mapping.py
